--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,11 @@
+androidviewclient==13.5.0
+certifi==2017.11.5
 cffi==1.11.2
+chardet==3.0.4
+idna==2.6
 numpy==1.13.3
 pycparser==2.18
+requests==2.18.4
 scipy==1.0.0
 sounddevice==0.3.9
+urllib3==1.22
