--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,19 @@
-androidviewclient==13.5.0
+androidviewclient==13.6.2
+backports.functools-lru-cache==1.5
 certifi==2017.11.5
 cffi==1.11.2
 chardet==3.0.4
+cycler==0.10.0
 idna==2.6
+matplotlib==2.1.2
 numpy==1.13.3
 pycparser==2.18
+pyparsing==2.2.0
+python-dateutil==2.6.1
+pytz==2017.3
 requests==2.18.4
 scipy==1.0.0
+six==1.11.0
 sounddevice==0.3.9
+subprocess32==3.2.7
 urllib3==1.22
