--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,30 @@
 androidviewclient==13.6.2
+audioread==2.1.5
 backports.functools-lru-cache==1.5
 certifi==2018.1.18
 cffi==1.11.4
 chardet==3.0.4
 cycler==0.10.0
+decorator==4.2.1
+enum34==1.1.6
+funcsigs==1.0.2
 idna==2.6
+joblib==0.11
+librosa==0.6.0
+llvmlite==0.22.0
 matplotlib==2.1.2
+numba==0.37.0
 numpy==1.14.1
+Pillow==5.0.0
 pycparser==2.18
 pyparsing==2.2.0
 python-dateutil==2.6.1
 pytz==2018.3
 requests==2.18.4
+resampy==0.2.0
+scikit-learn==0.19.1
 scipy==1.0.0
+singledispatch==3.4.0.3
 six==1.11.0
 sounddevice==0.3.10
 subprocess32==3.2.7
