--- a/requirements-py3.txt
+++ b/requirements-py3.txt
@@ -13,6 +13,7 @@ llvmlite==0.30.0
 matplotlib==3.1.1
 numba==0.46.0
 numpy==1.17.3
+Pillow==7.0.0
 pycparser==2.19
 pyparsing==2.4.4
 python-dateutil==2.8.1
