--- a/requirements-py3.txt
+++ b/requirements-py3.txt
@@ -1,28 +1,32 @@
-androidviewclient==20.0.0b3
-audioread==2.1.8
-certifi==2019.9.11
-cffi==1.13.2
+androidviewclient==20.0.0b6
+appdirs==1.4.4
+audioread==2.1.9
+certifi==2020.6.20
+cffi==1.14.3
 chardet==3.0.4
 culebratester-client==2.0.11
 cycler==0.10.0
-decorator==4.4.1
-idna==2.8
-joblib==0.14.0
-kiwisolver==1.1.0
-librosa==0.7.1
+decorator==4.4.2
+idna==2.10
+joblib==0.17.0
+kiwisolver==1.3.1
+librosa==0.8.0
 llvmlite==0.34.0
-matplotlib==3.1.1
-numba==0.46.0
-numpy==1.17.3
-Pillow==7.0.0
-pycparser==2.19
-pyparsing==2.4.4
+matplotlib==3.3.2
+numba==0.51.2
+numpy==1.19.4
+packaging==20.4
+Pillow==8.0.1
+pooch==1.2.0
+pycparser==2.20
+pyparsing==2.4.7
 python-dateutil==2.8.1
-requests==2.22.0
+requests==2.24.0
 resampy==0.2.2
 scikit-learn==0.23.2
-scipy==1.3.1
-six==1.13.0
-sounddevice==0.3.14
-SoundFile==0.10.2
-urllib3==1.25.6
+scipy==1.5.4
+six==1.15.0
+sounddevice==0.4.1
+SoundFile==0.10.3.post1
+threadpoolctl==2.1.0
+urllib3==1.25.11
